--- a/package.yml
+++ b/package.yml
@@ -4,51 +4,51 @@ package:
   type: "application"
   status: "production"
   required: true
-  version: "1.0.0"
+  version: "v3.8.0"
 
   dependencies:
     - name: "bsp"
       type: "package"
-      version: "3.17.0"
+      version: "v3.17.0"
     - name: "core"
       type: "package"
-      version: "3.13.1"
+      version: "v3.13.1"
     - name: "crypto"
       type: "package"
-      version: "3.8.0"
+      version: "v3.8.0"
     - name: "cryptoauthlib"
       type: "package"
-      version: "3.3.3"
+      version: "v3.3.3"
     - name: "csp"
       type: "package"
-      version: "3.18.0"
+      version: "v3.18.0"
     - name: "dev_packs"
       type: "package"
-      version: "3.18.0"
+      version: "v3.18.0"
     - name: "net"
       type: "package"
-      version: "3.10.0"
+      version: "v3.10.0"
     - name: "wireless_wifi"
       type: "package"
-      version: "3.9.1"
+      version: "v3.9.1"
     - name: "wolfssl"
       type: "package"
-      version: "5.4.0"
+      version: "v5.4.0"
     - name: "CMSIS-FreeRTOS"
       type: "package"
-      version: "10.4.6"
+      version: "v10.4.6"
     - name: "paho.mqtt.embedded-c"
       type: "package"
-      version: "1.2.3"
+      version: "v1.2.3"
     - name: "usb"
       type: "package"
-      version: "3.10.0"
+      version: "v3.10.0"
     - name: "wireless_system_pic32mzw1_wfi32e01"
       type: "package"
-      version: "3.8.0"
+      version: "v3.8.0"
     - name: "touch"
       type: "package"
-      version: "3.12.1"
+      version: "v3.12.1"
       
       
       
